[package]
name = "rezmq_native"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "rezmq_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = "thin"

[dependencies]
anyhow = "1"
bitflags = "2"
libc = "0.2"
nix = { version = "0.29", features = ["socket", "poll"] }
once_cell = "1"
rustler = { version = "0.35.0", features = ["nif_version_2_16"] }

[build-dependencies]
bindgen = "0.65"
